--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest",
-    "bundle":"react-native bundle"
+    "bundle": "react-native bundle"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.10.0",
     "react": "18.2.0",
-    "react-native": "0.74.2"
+    "react-native": "0.74.2",
+    "react-native-safe-area-context": "^4.10.7",
+    "react-native-screens": "^3.32.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
