--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -39,3 +39,11 @@ newArchEnabled=false
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+
+MYAPP_RELEASE_STORE_FILE=my-release-key.keystore
+
+    MYAPP_RELEASE_KEY_ALIAS=my-key-alias
+
+    MYAPP_RELEASE_STORE_PASSWORD=qingzhuyue
+
+    MYAPP_RELEASE_KEY_PASSWORD=qingzhuyue
