导航默认的 header

--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "start": "react-native start",
     "test": "jest",
     "bundle": "react-native bundle",
-    "setting":"react-native bundle --platform android --dev false --entry-file index.android.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res/"
+    "setting": "react-native bundle --platform android --dev false --entry-file index.android.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res/"
   },
   "dependencies": {
+    "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.10.0",
     "react": "18.2.0",
